--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@ a.active{
 <body>
 
 <ul>
-  <li><a class="active" href="#home">主页</a></li>
-  <li><a href="#news">新闻</a></li>
-  <li><a href="#contact">联系</a></li>
-  <li><a href="#about">关于</a></li>
+  <li><a class="active" href="#home">首页</a></li>
+  <li><a href="#news">学习项目</a></li>
+  <li><a href="#contact">我的教室</a></li>
+  <li><a href="#about">个人中心</a></li>
 </ul>
 
 </body>
